--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "@emotion/core": "^10.0.28",
+    "emotion": "^10.0.27",
+    "emotion-theming": "^10.0.27",
     "parcel-bundler": "^1.12.4"
   }
 }
