--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "(del-cli --force ./dist .cache .parcel-cache ./node_modules) & npm i"
   },
   "repository": {
     "type": "git",
@@ -26,8 +26,10 @@
   },
   "devDependencies": {
     "@emotion/core": "^10.0.28",
+    "del-cli": "^3.0.0",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
-    "parcel-bundler": "^1.12.4"
+    "parcel-bundler": "^1.12.4",
+    "parcel-plugin-imagemin": "^4.0.1"
   }
 }
