--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "parcel src/index.html",
     "build": "parcel build src/index.html",
-    "clean": "(del-cli --force ./dist .cache .parcel-cache ./node_modules) & npm i"
+    "clean": "(del-cli --force ./dist .cache .parcel-cache ./node_modules) & npm i",
+    "cleanDev": "(del-cli --force ./dist .cache .parcel-cache ./node_modules) & (npm i) & npm run dev"
   },
   "repository": {
     "type": "git",
@@ -21,15 +22,14 @@
   "homepage": "https://github.com/HenrikDK2/HotBurgersReact#readme",
   "dependencies": {
     "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.1.2"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "react-router-dom": "^5.1.2",
     "@emotion/core": "^10.0.28",
     "del-cli": "^3.0.0",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
-    "parcel-bundler": "^1.12.4",
-    "parcel-plugin-imagemin": "^4.0.1"
+    "parcel-bundler": "^1.12.4"
   }
 }
