--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "parcel build src/index.html",
+    "build": "(parcel build src/index.html) & (gulp build)",
     "clean": "(del-cli --force ./dist .cache .parcel-cache ./node_modules) & npm i",
     "cleanDev": "(del-cli --force ./dist .cache .parcel-cache ./node_modules) & (npm i) & npm run dev"
   },
@@ -26,6 +26,10 @@
   },
   "devDependencies": {
     "react-router-dom": "^5.1.2",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp": "^4.0.2",
+    "gulp-htmlmin": "^5.0.1",
     "@emotion/core": "^10.0.28",
     "del-cli": "^3.0.0",
     "emotion": "^10.0.27",
