--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "parcel src/index.html",
-    "build": "(parcel build src/index.html) & (gulp build)",
-    "clean": "(del-cli --force ./dist .cache .parcel-cache ./node_modules) & npm i",
-    "cleanDev": "(del-cli --force ./dist .cache .parcel-cache ./node_modules) & (npm i) & npm run dev"
+    "build": "(npm run del) & (parcel build src/index.html --public-url ./)",
+    "del": "del-cli --force ./dist .cache .parcel-cache",
+    "reset": "(del-cli --force ./dist .cache .parcel-cache ./node_modules) & npm i",
+    "resetDev": "(del-cli --force ./dist .cache .parcel-cache ./node_modules) & (npm i) & npm run dev"
   },
   "repository": {
     "type": "git",
