--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "HotBurgersReact",
+  "name": "hotburgersreact",
   "version": "1.0.0",
   "description": "HotBurgers er en fast-food hjemmeside, frems til din egen burger.",
   "main": "index.js",
