--- a/package.json
+++ b/package.json
@@ -26,15 +26,15 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "react-router-dom": "^5.1.2",
-    "gulp-imagemin": "^7.1.0",
-    "gulp-uglify": "^3.0.2",
-    "gulp": "^4.0.2",
-    "gulp-htmlmin": "^5.0.1",
     "@emotion/core": "^10.0.28",
-    "del-cli": "^3.0.0",
+    "del-cli": "^3.0.1",
     "emotion": "^10.0.27",
     "emotion-theming": "^10.0.27",
-    "parcel-bundler": "^1.12.4"
+    "gulp": "^4.0.2",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-imagemin": "^7.1.0",
+    "gulp-uglify": "^3.0.2",
+    "parcel-bundler": "^1.12.4",
+    "react-router-dom": "^5.1.2"
   }
 }
